* Added support for server-side PTZ preset thumbnails.  An upcoming BI release should ensure the thumbnails get created automatically when presets are SET. * Since server-side PTZ preset thumbnails are larger than the UI previously saved, the popup thumbnail has been repositioned and is now dynamically sized. * Delete no longer fails when the first item to be deleted is currently open in the clip player. * When response.data is null in a ListDialog, a message is added to the table saying "This list is empty." * Clicking the date filter button when the panel is already open now closes the panel, and no longer makes the panel blink. * Custom dropdown boxes now share a z-index with the playback settings panels (9999999), placing them above dialog boxes (1000+) and toasts (999999). * Opening the Disk Usage dialog more than once no longer opens multiple copies. * Saved credentials are now forgotten when they result in an unsuccessful login. * Added and expanded several help sections. * Misc bugfixes.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -789,14 +789,22 @@ div.icon, a.icon
 
 #presetBigThumb
 {
+	box-sizing: border-box;
 	position: absolute;
 	border: 4px ridge #888888;
 	border-radius: 5px;
-	max-width: 160px;
-	max-height: 180px;
+	max-width: 500px;
+	max-height: 500px;
+	z-index: 9999;
 	overflow: hidden;
 	font-size: 0px;
 }
+
+	#presetBigThumb img
+	{
+		max-width: 100%;
+		max-height: 100%;
+	}
 
 .presetDescription
 {
@@ -807,7 +815,7 @@ div.icon, a.icon
 	text-align: center;
 	background-color: #000000;
 	padding: 0px 2px;
-	max-width: 160px;
+	max-width: 100%;
 	max-height: 20px;
 }
 /* Progress Bars */
@@ -1381,7 +1389,7 @@ div.icon, a.icon
 	display: inline-block;
 	position: absolute;
 	border: 1px solid #969BA7;
-	z-index: 100;
+	z-index: 9999999; /* Same z-index as playback settings panels. Toasts are at 999999 (one less 9)*/
 	color: #DDDDDD;
 	overflow: auto;
 }
@@ -2138,10 +2146,12 @@ div.icon, a.icon
 	font-size: 16px;
 	bottom: 64px;
 }
+
 .sizeMedium #toast-container
 {
 	bottom: 48px;
 }
+
 .sizeSmall #toast-container
 {
 	bottom: 36px;
